[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "httpx"
authors = [{name = "Tom Christie", email = "tom@tomchristie.com"}]
license = {text = "BSD-3-Clause"}
description = "The next generation HTTP client."
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["readme", "version"]
requires-python = ">=3.7"
dependencies = [
    "certifi",
    "charset_normalizer",
    "sniffio",
    "rfc3986[idna2008]>=1.3,<2",
    "httpcore>=0.14.5,<0.15.0",
    "async_generator; python_version < '3.7'",
]

[project.urls]
Homepage = "https://github.com/encode/httpx"
Changelog = "https://github.com/encode/httpx/blob/master/CHANGELOG.md"
Documentation = "https://www.python-httpx.org"
Source = "https://github.com/encode/httpx"

[project.optional-dependencies]
http2 = ["h2>=3,<5"]
socks = ["socksio==1.*"]
brotli = [
    "brotli; platform_python_implementation == 'CPython'",
    "brotlicffi; platform_python_implementation != 'CPython'",
]
cli = ["click==8.*", "rich>=10,<13", "pygments==2.*"]

[project.scripts]
httpx = "httpx:main"

[tool.setuptools]
packages = ["httpx", "httpx._transports"]
zip-safe = false

[tool.setuptools.package-data]
httpx = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}


[tool.setuptools_scm]
write_to = "httpx/__version__.py"
write_to_template = "__version__ = \"{version}\"\n"
