[metadata]
name = httpx
author = Tom Christie
author_email = tom@tomchristie.com
license = BSD-3-Clause
description = The next generation HTTP client.
url = https://github.com/encode/httpx
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Framework :: AsyncIO
    Framework :: Trio
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/encode/httpx/blob/master/CHANGELOG.md
    Documentation = https://www.python-httpx.org
    Source = https://github.com/encode/httpx

[options]
packages = httpx, httpx/_transports
zip_safe = False
install_requires =
    certifi
    charset_normalizer
    sniffio
    rfc3986[idna2008]>=1.3,<2
    httpcore>=0.14.5,<0.15.0
    async_generator; python_version < '3.7'
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts = httpx=httpx:main

[options.extras_require]
http2 = h2>=3,<5
socks = socksio==1.*
brotli =
    brotli; platform_python_implementation == 'CPython'
    brotlicffi; platform_python_implementation != 'CPython'
cli = click==8.*; rich>=10,<13; pygments==2.*

[options.package_data]
httpx = py.typed
